--- a/lib/Catalyst/Manual/Installation/CentOS4.pod
+++ b/lib/Catalyst/Manual/Installation/CentOS4.pod
@@ -162,7 +162,7 @@ packages used by Catalyst.
 
 Type the following:
 
-    perl -MCPAN -e shell
+    $ perl -MCPAN -e shell
     
     ...
     
@@ -178,6 +178,48 @@ Type the following:
     ...
     
     cpan> quit
+
+=item *
+
+B<Optional:> The remaining steps of the installation could run 
+significantly faster if you configure a fast mirror that uses HTTP vs. 
+FTP (both transfer data at the same rate once the transfer is in 
+progress, but HTTP connects much more quickly... and a Catalyst 
+installation involves many connections).  One way to do this is to 
+answer C<yes> to the C<Are you ready for manual configuration?> prompt 
+when you ran C<perl -MCPAN -e shell> above.  Or, you can rerun the 
+script by entering the following command at the C<cpanE<gt>> prompt:
+
+    cpan> o conf init
+
+It will then take you through the configuration dialog.  
+
+However, it's often easiesr to avoid the full configuration dialog and
+manually add a URL.  To prepend a new URL to the B<front> of the list,
+use the C<unshift> option to C<o conf>:
+
+    cpan> o conf urllist unshift http://www.perl.com/CPAN/
+
+Where C<http://www.perl.com/CPAN/> is replaced by a nearby, HTTP-based 
+mirror.  You can get a list of all mirrors (including where they are 
+located, their bandwidth, and their update frequency) at 
+L<http://www.perl.com/CPAN/MIRRORED.BY>.
+
+Then, be sure to save your changes (or they will be lost the next
+time you restart the CPAN shell):
+
+    cpan> o conf commit
+
+You can view the current settings with C<o conf urllist> (or just
+C<o conf> to view all settings):
+
+    cpan> o conf urllist
+        urllist           
+            http://www.perl.com/CPAN/
+    Type 'o conf' to view configuration edit options
+ 
+Note that multiple values can be entered for the C<urllist> option (the
+first entry will be used as long as it responds).
 
 =item * 
 
@@ -197,6 +239,8 @@ C<install('Catalyst');> line):
     install('Class::DBI');
     install('DBIx::Class');
     install('DBIx::Class::HTMLWidget');
+    install('Module::Install');
+    install('Catalyst::Plugin::ConfigLoader');
     install('Catalyst::Plugin::Session');
     install('Catalyst::Plugin::Session::State::Cookie');
     install('Catalyst::Plugin::Session::Store::FastMmap');
@@ -210,6 +254,7 @@ C<install('Catalyst');> line):
     install('Catalyst::Plugin::HTML::Widget');
     install('Catalyst::Model::DBIC::Schema');
     install('Catalyst::View::TT');
+    install('Test::WWW::Mechanize');
     install('Test::WWW::Mechanize::Catalyst');
     install('Test::Pod');
     install('Test::Pod::Coverage');
@@ -222,6 +267,49 @@ Type C<perl cat-install>.  It will take a while to complete.
 
 You should now have a functioning Catalyst installation with the modules
 and plugins required to run the Catalyst tutorial.
+
+
+=head1 TESTING THE INSTALLATION
+
+=over 4
+
+=item *
+
+Download the tarball of the final tutorial application:
+
+    $ wget http://dev.catalyst.perl.org/repos/Catalyst/trunk/examples/Tutorial/Final_Tarball/MyApp.tgz
+
+=item *
+
+Untar it:
+
+    $ tar zxvf MyApp.tgz
+    $ cd MyApp
+
+=item *
+
+Run the tests:
+
+    $ CATALYST_DEBUG=0 prove --lib lib  t
+    t/02pod...............skipped
+            all skipped: set TEST_POD to enable this test
+    t/03podcoverage.......skipped
+            all skipped: set TEST_POD to enable this test
+    t/01app...............ok                                                     
+    t/controller_Login....ok                                                     
+    t/live_app01..........ok 1/0[debug] ***Root::auto User not found, forwarding to /login
+    t/live_app01..........ok 2/0[debug] ***Root::auto User not found, forwarding to /login
+    t/live_app01..........ok 15/0[debug] ***Root::auto User not found, forwarding to /login
+    t/live_app01..........ok 16/0[debug] ***Root::auto User not found, forwarding to /login
+    t/live_app01..........ok                                                     
+    t/model_MyAppDB.......ok                                                     
+    All tests successful, 2 tests skipped.
+    Files=6, Tests=55, 11 wallclock secs ( 4.68 cusr +  4.84 csys =  9.52 CPU)
+
+You should see C<All tests successful>.
+
+=back
+
 
 
 =head1 AUTHOR
